fixed text align in features on small screens

--- a/app/features.sass
+++ b/app/features.sass
@@ -3,6 +3,8 @@
   justify-content: center
   align-items: center
   flex-direction: column
+  span
+    text-align: center
   @media (min-width: 1100px)
     width: 50%
   @media (max-width: 1100px)
