--- a/app/main.sass
+++ b/app/main.sass
@@ -15,36 +15,8 @@ body
   @media (max-width: 1200px) and (min-width: 800px)
     font-size: 16pt
   @media (max-width: 800px)
-    font-size: 10pt
+    font-size: 14pt
   font-family: "Open Sans"
-.footer
-  position: absolute
-  left: 0
-  right: 0
-  @media (min-width: 1100px)
-    padding: 7rem 5rem 1.5rem 5rem
-  @media (max-width: 1100px)
-    padding: 4rem 2rem 2rem
-
-  background-image: url("image/bg-bot.png")
-  background-size: cover
-  background-position: top
-  @extend .col
-  div
-    @media (min-width: 1100px)
-      padding: 0 2rem
-    @media (max-width: 1100px)
-      padding: 0 1rem
-  .row
-    @media (min-width: 1100px)
-      padding: 1rem 2rem
-    @media (max-width: 1100px)
-      padding: 1rem 1rem
-    div
-      @include pointable()
-    i
-      @include circle(30px)
-
 .row
   display: flex
   align-items: center
